--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "private": true,
   "scripts": {
-    "test": "karma start karma.conf.js",
-    "lint": "eslint ./"
+    "test": "karma start karma.conf.js"
   },
   "devDependencies": {
     "eslint": "1.10.3",
