--- a/package.json
+++ b/package.json
@@ -9,15 +9,9 @@
   },
   "private": true,
   "scripts": {
-    "test": "karma start karma.conf.js"
+    "test": "jest"
   },
   "devDependencies": {
-    "eslint": "1.10.3",
-    "jasmine-core": "2.4.1",
-    "karma": "0.13.19",
-    "karma-jasmine": "0.3.7",
-    "karma-phantomjs-launcher": "1.0.0",
-    "karma-spec-reporter": "0.0.24",
-    "phantomjs-prebuilt": "2.1.4"
+    "jest": "^23.1.0"
   }
 }
